--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -1500,7 +1500,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Provide your response here.**"
+    "**Provide your response here.**\n",
+    "You can use the get_top_article_ids function to give new users the most popular articles, which in turn can be complemented by using some categories that help segment them, such as the country from which they connect, age, if they are male or female, etc.\n",
+    "Or use a search engine to use a knowledge model according to the words they enter (name of movies, actors, type of movies, etc.)"
    ]
   },
   {
